Pagina de inicio

--- a/sgim/templates/base.html
+++ b/sgim/templates/base.html
@@ -87,7 +87,7 @@
                     },
                     {
                         "id":"fb_plan",
-                        "url":"http://www.example.com",
+                        "url":"/mantto/planes/agregar/",
                         "bgcolor":"#00BCD4",
                         "color":"#fffff",
                         "icon":"<i class='icon ion-calendar'></i>",
@@ -95,7 +95,7 @@
                     },
                     {
                         "id":"fb_mantto",
-                        "url":"http://www.example.com",
+                        "url":"/mantto/boletas/agregar/",
                         "bgcolor":"#607D8B",
                         "color":"#fffff",
                         "icon":"<i class='icon ion-ios-briefcase' data-title='Matt' data-content='Matt has been a member since July 2014'></i>",
@@ -103,7 +103,7 @@
                     },
                     {
                         "id":"fb_incident",
-                        "url":"http://www.example.com",
+                        "url":"/incidencias/incidentes/agregar/",
                         "bgcolor":"orange",
                         "color":"white",
                         "icon":"<i class='icon ion-flash'></i>"
