--- a/sgim/templates/cuentas/perfil.html
+++ b/sgim/templates/cuentas/perfil.html
@@ -13,9 +13,12 @@
     <li><a href="/">Inicio</a></li>
     <li class="active"><a href="{% url 'perfil' user %}">Mi Cuenta</a></li>
 </ul>
-	<div vertical layout>
 
-		<h4 class="ui icon header">
+<div class="container-fluid">
+<div class="row">   
+    <div class="col-md-4 col-md-offset-4"> 
+
+	<h4 class="ui icon header">
 		  <i class="user icon"></i>
 		  <div class="content">
 		    Perfil de Usuario
@@ -24,8 +27,7 @@
 					Cambiar mi  
 					<a href="{% url 'actualizar_clave' %}">contraseña</a>
 				{% endif %}</div>
-		  </div>
-		</h4>
+		  </div></h4>
 
 	<div class=" ui card" self-center >
 	    <div class="image">
@@ -37,8 +39,8 @@
 	      <div class="meta">
 	        <a></a>
 	      </div>
-	      <div class="description" layout vertical>
-	       <span><i class="call icon"></i>: {{perfil.telefono}}</span>
+	      <div class="description">
+	       <span><i class="call icon"></i>: {{perfil.telefono}}</span> <br>
 	       <span><i class=" mail icon"></i>: {{perfil.email }}</span>
 	       
 	      </div>
@@ -52,12 +54,13 @@
 			    </a>
 		    </span>	   	    
 	  </div>
-	  {% endif %}
-
-	    
-  </div>
+	  {% endif %}  
+  	</div>
 
 </div>
+</div>	
+</div>
+
 
 
 
