--- a/sgim/templates/includes/nav_bar.html
+++ b/sgim/templates/includes/nav_bar.html
@@ -5,7 +5,7 @@
             <i class="mdi-navigation-more-vert"></i>
         </button>
 
-        <a class="navbar-brand" href="#"><i class="icon ion-ios-people"></i> Sala Tecnica</a>
+        <a class="navbar-brand" href="/"><i class="icon ion-ios-people"></i> Sala Tecnica</a>
     </div>
              
         <div class="navbar-collapse collapse navbar-responsive-collapse">
