--- a/sgim/templates/inventario/reportes/disp_todo.html
+++ b/sgim/templates/inventario/reportes/disp_todo.html
@@ -180,7 +180,13 @@
 				</strong>	
 				</td>
 				<td colspan="3" class="titulo_mtto">{{mantto.creado}}</td>
-				<td colspan="1" class="titulo_mtto">{{mantto.tipo}}</td>
+				<td colspan="1" class="titulo_mtto">
+					{% if mantto.tipo = '1' %}
+			    		Preventivo
+			    	{% else %}
+						Correctivo
+			    	{% endif %}
+    			</td>
 			</tr>		
 			<tr>
 			    <th class="sub_titulo_mtto" colspan="2">Paro de Equipo</th>	
