--- a/sgim/templates/cuentas/login2.html
+++ b/sgim/templates/cuentas/login2.html
@@ -8,13 +8,34 @@
 	{% endblock header %}
 	{% block contenido %}
 		
+         
+<div class="row" style='padding-top:10px'>   
+    <div class="col-md-6 col-md-offset-3"> 
+         
+        <h2 class="ui icon header">
+            <div class="image">
+              <img src="/static/images/logo.png" width='100px'>
+            </div>
+          <div class="content">
+             Sistema de información para la gestión de mantenimientos e incidentes de los dispositivos de cómputo del Centro de Control Radar Managua.
+            <div class="sub header">
+               <p> <strong>Aeropuerto Internacional Augusto C. Sandino </strong></p> 
+               
+            </div>
+          </div>
+        </h2>
+
+
+    </div>
+</div>
+
 
 <div class="ui stackable three column centered grid">
 
     <div class="column centered">
 
 
-		<div style="padding-top:40px" >
+		<div style="padding-top:20px" >
             {% if form.non_field_errors %}
             <div class="alert alert-dismissable alert-warning">
                 <button type="button" class="close" data-dismiss="alert">×</button>
