--- a/sgim/templates/cuentas/actualiza_perfil.html
+++ b/sgim/templates/cuentas/actualiza_perfil.html
@@ -42,7 +42,7 @@
 							src="{{MEDIA_URL}}{{user.imagen}}">
 					</div>
 					<div class="col-md-9 col-sm-9 ">
-						<form class="form-horizontal" method="post">
+						<form class="form-horizontal" method="post" enctype="multipart/form-data">
                                 {% csrf_token %}
                         <div class="form-group ">
                         	{% if form.old_password.errors %}	
