--- a/sgim/templates/home.html
+++ b/sgim/templates/home.html
@@ -135,7 +135,7 @@
              <div class="row">
                    <div class="col-md-12">
                        <div class="panel panel-danger">
-                            <div class="panel-heading">
+                            <div class="panel-heading" >
                                 <div class="row" style='color:white'>                                   
                                     <i class="icon ion-ios-bell" style='font-size:20px;margin-top:1px'></i>
                                     Incidencidentes sin resolver     
@@ -159,7 +159,16 @@
                                             </div>
                                         </div>  
                                     {% empty %}       
-                                        <h5>No hay Incidentes sin resolver</h5>
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                              <h4 style='color:#2196F3'><i class='icon ion-trophy'></i></h4>  
+                                            </div>
+                                            <div class="col-md-11">
+                                                <h5>
+                                                    No hay incidentes pendientes de resolver
+                                                </h5>
+                                            </div>
+                                        </div>
                                     {% endfor %}
                                 </div>
                             </div>                      
@@ -169,31 +178,44 @@
 
             <div class="row">
                    <div class="col-md-6">
-                       <div class="panel panel-info">
+                       <div class="panel panel-primary">
                             <div class="panel-heading">
                                 <div class="row" style='color:white'>                                   
                                     <i class="icon ion-ios-bell" style='font-size:20px;margin-top:1px'></i>
-                                   Cambios Programados    
+                                   Mis mantenimientos asignados pendientes de iniciar    
                                 </div>
                             </div> 
                             <div class="panel-body">
                                 <div class="ui  list">
-                                    {% for cambio in cambios %}
+                                    {% for mi_mantto in mis_manntos %}
                                         <div class="item">
-                                            <img class="ui avatar image" src="{{MEDIA_URL}}{{cambio.creador.imagen}}">
+                                            <img class="ui avatar image" src="{{MEDIA_URL}}{{mi_mantto.responsable.imagen}}">
                                             <div class="content">
                                                 <span class="header">
-                                                    {{cambio.titulo}}
+                                                    <a href="/incidencias/incidentes/reporte/detalle/{{mi_mantto.id}}" style='text-decoration:none'>
+                                                        {{mi_mantto.rutina}} 
+                                                    </a> 
                                                 </span>
                                                 <div class="description">
-                                                        Solicita: {{cambio.solicitante}} <br>
-                                                        Responsable: {{cambio.responsable}} 
-                                                    <br> <small> el {{cambio.creado}}</small>
+                                                    <span style='font-size:13px'>
+                                                     Responsable: {{mi_mantto.responsable}} 
+                                                    </span>
+                                                    <br> <small> Para el {{mi_mantto.fecha_inicio_prevista |date:"l, d F Y"}}</small>
+                                                    
                                                 </div>
                                             </div>
                                         </div>  
                                     {% empty %}       
-                                        <h5>No hay Cambios pendientes</h5>
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                              <h2><i class='icon ion-ribbon-a blue'></i></h2>  
+                                            </div>
+                                            <div class="col-md-11">
+                                                <h5>
+                                                    No tienes mantenimientos asignados pendientes de iniciar 
+                                                </h5>
+                                            </div>
+                                        </div>
                                     {% endfor %}
                                 </div>
 
@@ -202,18 +224,18 @@
                         </div>
                    </div>
                    <div class="col-md-6">
-                       <div class="panel panel-primary">
-                            <div class="panel-heading">
+                       <div class="panel panel-info">
+                            <div class="panel-heading"  style='background-color:#607D8B'>
                                 <div class="row" style='color:white'>                                   
                                     <i class="icon ion-ios-bell" style='font-size:20px;margin-top:1px'></i>
-                                    Mantenimientos Programados
+                                    Otros mantenimientos pendientes de iniciar
                                 </div>
                             </div> 
                             <div class="panel-body">
                                 <div class="ui list">
                                   {% for mantto in manttos %}
                                         <div class="item">
-                                            <img class="ui avatar image" src="{{MEDIA_URL}}{{mantto.creador.imagen}}">
+                                            <img class="ui avatar image" src="{{MEDIA_URL}}{{mantto.responsable.imagen}}">
                                             <div class="content">
                                                 <span class="header">
                                                     <a href="/incidencias/incidentes/reporte/detalle/{{mantto.id}}" style='text-decoration:none'>
@@ -230,13 +252,68 @@
                                             </div>
                                         </div>  
                                     {% empty %}       
-                                        <h5>No hay Incidentes sin resolver</h5>
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                              <h2><i class='icon ion-thumbsup blue'></i></h2>  
+                                            </div>
+                                            <div class="col-md-11">
+                                                <h5>
+                                                    No hay mantenimientos pendientes de iniciar 
+                                                </h5>
+                                            </div>
+                                        </div>
                                     {% endfor %}
                                 </div>
                             </div>                      
                         </div>
                    </div>
             </div>
+            
+            <div class="row">
+                   <div class="col-md-12">
+                       <div class="panel panel-danger">
+                            <div class="panel-heading" style='background-color:#00BCD4'>
+                                <div class="row" style='color:white'>                                   
+                                    <i class="icon ion-ios-bell" style='font-size:20px;margin-top:1px'></i>
+                                    Cambios en progreso    
+                                </div>
+                            </div> 
+                            <div class="panel-body">
+                                <div class="ui  list" >
+                                    {% for inc in incidentes %}
+                                        <div class="item" >
+                                            <img class="ui avatar image" src="{{MEDIA_URL}}{{inc.creador.imagen}}">
+                                            <div class="content" >
+                                                <span class="header">
+                                                    ({{inc.creador}}) {{inc.creador.firstname}} {{inc.creador.lastname}}
+                                                </span>
+                                                <div class="description" >                              
+                                                            <a href="/incidencias/incidentes/reporte/detalle/{{inc.id}}" style='text-decoration:none'>
+                                                            {{inc.dispositivo}} - {{inc.tipo}} 
+                                                            </a> 
+                                                            <br> <small> el {{inc.creado}}</small>  
+                                                </div>
+                                            </div>
+                                        </div>  
+                                    {% empty %}       
+                                        <div class="row">
+                                            <div class="col-md-1">
+                                              <h3 style='color:#2196F3'><i class='icon ion-wand'></i></h3>  
+                                            </div>
+                                            <div class="col-md-11">
+                                                <h5>
+                                                    No hay cambios lelvandose a cabo
+                                                </h5>
+                                            </div>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>                      
+                        </div>
+                   </div>
+            </div>
+
+
 
             </div>
         </div>
